@@ -816,6 +816,8 @@
 
         <copy todir="${dist.dir}/etc/pig" file="conf/pig.properties"/>
 
+        <copy todir="${dist.dir}/etc/pig" file="conf/log4j.properties.template"/>
+
         <copy todir="${dist.dir}/share/pig/test" includeEmptyDirs="true">
             <fileset dir="${test.src.dir}" />
         </copy>
@@ -882,7 +884,9 @@
             <fileset dir="${build.docs}" />
         </copy>
 
-		<copy todir="${dist.dir}/conf" file="conf/pig.properties"/>
+        <copy todir="${dist.dir}/conf" file="conf/pig.properties"/>
+
+        <copy todir="${dist.dir}/conf" file="conf/log4j.properties.template"/>
 
         <copy todir="${dist.dir}/src" includeEmptyDirs="true">
             <fileset dir="${src.dir}" />
